--- a/style.css
+++ b/style.css
@@ -38,9 +38,19 @@ justify-content: center;
     overflow-x:auto:
 
     gap: 15px;
+padding: 20px:
+scrollp-behavior: smooth;
+}
 
+.categoria-video::-webkit-scrollbar{
+    height: 8px;
+}
+.categoria-video::-webkit-scrollbar-thumb{
+    background-color: rgb(21, 189, 35)
+    border-radius: 4px;
 }
 .categoria{
+
     padding-left: 20px;
     padding-right: 28px;
     }
